--- a/userCMD/userCMD.csproj
+++ b/userCMD/userCMD.csproj
@@ -42,8 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Network.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScanerHelper.cs" />
+    <Compile Include="TcpClientWithTimeout.cs" />
+    <Compile Include="WaitHandlePlus.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
