--- a/服务器获取端口扫描/服务器获取端口扫描.csproj
+++ b/服务器获取端口扫描/服务器获取端口扫描.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{23C9D0DC-5EF4-4479-B6F0-B4D9405B666B}</ProjectGuid>
+    <ProjectGuid>{954ABA94-1C55-4A98-A162-A08684F007FE}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Thead_anysc</RootNamespace>
-    <AssemblyName>Thead_anysc</AssemblyName>
+    <RootNamespace>服务器获取端口扫描</RootNamespace>
+    <AssemblyName>服务器获取端口扫描</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpClientWithTimeout.cs" />
+    <Compile Include="WaitHandlePlus.cs" />
     <Compile Include="WebRequestWithTimeout.cs" />
   </ItemGroup>
   <ItemGroup>
