--- a/SearchRepleace/SearchRepleace.csproj
+++ b/SearchRepleace/SearchRepleace.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base.cs" />
+    <Compile Include="FileHelper.cs" />
+    <Compile Include="Family.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
